--- a/src/common/header.pug
+++ b/src/common/header.pug
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
   <head>
+    <meta name="viewport", content="width=device-width, initial-scale=1.0")/>
+    <meta http-equiv="X-UA-Compatible", content="ie=edge"/>
     <title>Webpack test</title>
   </head>
   <body>
     <header>
       <h2>This is the header!</h2>
     </header>
+
+
+
