--- a/src/scss/blocs/header.scss
+++ b/src/scss/blocs/header.scss
@@ -1,3 +1,6 @@
 header {
-  background: green;
+    width: 100%;
+    height : 100vh;
+    
+    background: url('../img/YikeBoard_4.jpg') center no-repeat;
 }
