Add the project structure and add AOS Library

--- a/src/common/header.pug
+++ b/src/common/header.pug
@@ -6,8 +6,11 @@
     <title>Webpack test</title>
   </head>
   <body>
+    <nav>
+      <p>NavBar</p>
+    </nav>
     <header>
-      <h2>This is the header!</h2>
+      <p>Header</p>
     </header>
 
 
