--- a/src/scss/blocs/header.scss
+++ b/src/scss/blocs/header.scss
@@ -1,6 +1,20 @@
+$navBarWidth : 6vh;
+
+nav {
+    width: 100%;
+    height: $navBarWidth;
+    background-color: #CCCCCC;
+    display : flex;
+    align-items: center;
+    justify-content: center
+}
+
 header {
     width: 100%;
-    height : 100vh;
-    
-    background: url('../img/YikeBoard_4.jpg') center no-repeat;
+    height : 100vh - $navBarWidth;
+    background: url('../img/YikeBoard_4.jpg') center center no-repeat;
+    background-size: 110%;
+    display : flex;
+    align-items: center;
+    justify-content: center
 }
