--- a/src/scss/blocs/header.scss
+++ b/src/scss/blocs/header.scss
@@ -16,5 +16,5 @@ header {
     background-size: 110%;
     display : flex;
     align-items: center;
-    justify-content: center
+    justify-content: center;
 }
