Add header style

--- a/src/common/header.pug
+++ b/src/common/header.pug
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
-<html lang="fr">
-  <head>
-    <meta name="viewport", content="width=device-width, initial-scale=1.0")/>
-    <meta http-equiv="X-UA-Compatible", content="ie=edge"/>
-    <title>Webpack test</title>
-  </head>
-  <body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+</head>
+<body>
     <nav>
-      <p>NavBar</p>
+        <div class="nav__burgerMenu">
+            
+        </div>
+
+        <div class="nav__logo">
+            
+        </div>
     </nav>
-    <header>
-      <p>Header</p>
-    </header>
-
-
-
+    
