--- a/src/scss/blocs/header.scss
+++ b/src/scss/blocs/header.scss
@@ -1,20 +1,35 @@
-$navBarWidth : 6vh;
+@import '../_variables.scss';
 
 nav {
     width: 100%;
-    height: $navBarWidth;
-    background-color: #CCCCCC;
+    height: $navBarHeight;
+    background-color:transparent;
     display : flex;
+    flex-direction: row;
+    justify-content: space-around;
     align-items: center;
-    justify-content: center
+    position: fixed;
+    top: 0;
 }
 
-header {
-    width: 100%;
-    height : 100vh - $navBarWidth;
-    background: url('../img/YikeBoard_4.jpg') center center no-repeat;
-    background-size: 110%;
-    display : flex;
-    align-items: center;
-    justify-content: center;
+.nav__whiteBG {
+    background-color: white;
+    -webkit-box-shadow: 0px 0px 47px -11px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 0px 47px -11px rgba(0,0,0,0.75);
+    box-shadow: 0px 0px 47px -11px rgba(0,0,0,0.75);
+}
+
+
+.nav__burgerMenu {
+    width: 42px;
+    height: 42px;
+    margin-right: 30%; 
+    background-color: green
+}
+
+.nav__logo {
+    width: 42px;
+    height: 42px;
+    margin-left: 30%; 
+    background-color: green
 }
