--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -1,8 +1,9 @@
 include ../common/header.pug
 
 <main id="contentPage">
-    
+    include sections/header.pug
+    include sections/firstSection.pug
 </main>
 
-include ../common/footer.pug
+
 
