--- a/src/scss/blocs/header.scss
+++ b/src/scss/blocs/header.scss
@@ -6,7 +6,7 @@ nav {
     background-color:transparent;
     display : flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     position: fixed;
     top: 0;
@@ -21,15 +21,50 @@ nav {
 
 
 .nav__burgerMenu {
-    width: 42px;
-    height: 42px;
-    margin-right: 30%; 
-    background-color: green
+    width: 15%;
+    background-color: green;
+    margin-left: 1rem;
 }
 
 .nav__logo {
-    width: 42px;
-    height: 42px;
-    margin-left: 30%; 
-    background-color: green
+    width: 40%;
+    height: 52px;
+    background: url("../img/YikeBoard_Logo.png") center no-repeat;
+    background-size: 80%;
+}
+
+
+.header {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    background: url("../img/YikeBoard_8.jpg") 41% 0;
+    background-size: 270%;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    line-height: 6rem;
+    font-family: "Arial ", sans-serif;
+    h1 {
+        font-weight: 900;
+        font-size: 5rem;
+        margin-top: 6rem;
+        text-transform: uppercase;
+        color: white;
+    }
+    h2 {
+        font-weight: 500;
+        font-size: 2rem;
+        text-transform: uppercase;
+        color: white;
+        margin-bottom: 7rem;
+    }
+    button {
+        padding: 1rem 3rem;
+        background-color: #27ae60 ;
+        border: none;
+        color: white;
+        font-size: 3rem;
+    }
 }
