--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,5 +1,6 @@
 @import 'blocs/header';
 @import 'blocs/footer';
+@import 'blocs/firstSection';
 @import 'variables';
 
 @font-face {
@@ -12,9 +13,12 @@
   margin : 0
 }
 
+html {
+  font-size: 62.5%;
+}
+
 #contentPage {
   height: auto;
-  margin-top: $navBarHeight;
     &__mobile {
       width: 100vw
     }
@@ -27,13 +31,4 @@
       margin: 0 auto;
     }
 
-}
-
-h1 {
-  color: blue;
-  font-family: "Roboto", Arial;
-
-  &:hover {
-    color: green;
-  }
 }
