Create sections and add images

--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -3,6 +3,10 @@ include ../common/header.pug
 <main id="contentPage">
     include sections/header.pug
     include sections/firstSection.pug
+    include sections/secondSection.pug
+    include sections/thirdSection.pug
+    include sections/fourthSection.pug
+    include sections/fifthSection.pug
 </main>
 
 
