--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -7,6 +7,8 @@ include ../common/header.pug
     include sections/thirdSection.pug
     include sections/fourthSection.pug
     include sections/fifthSection.pug
+    include sections/sixthSection.pug
+    include sections/seventhSection.pug
 </main>
 
 
