--- a/src/pages/sections/fifthSection.pug
+++ b/src/pages/sections/fifthSection.pug
@@ -1,7 +1,7 @@
 <section class="secondSection">
     <div class="fifthSectionImg"></div>
     <div class="fifthSectionIcon"></div>
-    <div class="sectionContent">
+    <div class="sectionContentPerf">
         <h2>Choose your color</h2>
     </div>
     <div class="colorChoiseImg"></div>
