--- a/src/scss/blocs/fifthSection.scss
+++ b/src/scss/blocs/fifthSection.scss
@@ -6,12 +6,23 @@
   height: 25rem;
 }
 
+.sectionContentPerf {
+  width: 80%;
+  margin:0 auto;
+  text-align: center;
+  h2 {
+    padding: 0 0 7% 0;
+    font-size: 2.2rem;
+    text-transform: uppercase;
+    font-family: sans-serif;
+  }
+}
+
 .colorChoiseImg {
-  background: url("../img/YikeBoard_14.png") no-repeat center left;
-  background-size: 41%;
-  width: 75vw;
-  height: 34rem;
-  transform: rotate(90deg);
+  background: url("../img/YikeBoard_14.png") no-repeat center;
+  background-size: 85%;
+  width: 100vw;
+  height: 20rem;
 }
 
 .fifthSectionIcon {
