--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -1,6 +1,8 @@
 include ../common/header.pug
 
 <main id="contentPage">
+
+    include ../common/burgerMenu.pug
     include sections/header.pug
     include sections/firstSection.pug
     include sections/secondSection.pug
