--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,5 +1,6 @@
 @import 'blocs/header';
 @import 'blocs/footer';
+@import 'blocs/burgerMenu';
 @import 'blocs/firstSection';
 @import 'blocs/secondSection';
 @import 'blocs/thirdSection';
