add newsletter section

--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -10,6 +10,7 @@ include ../common/header.pug
     include sections/fourthSection.pug
     include sections/fifthSection.pug
     include sections/sixthSection.pug
+    include sections/newsletter.pug
     include sections/seventhSection.pug
 </main>
 
