--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,5 +1,5 @@
 @import 'blocs/header';
-@import 'blocs/footer';
+@import 'blocs/newsletter';
 @import 'blocs/burgerMenu';
 @import 'blocs/firstSection';
 @import 'blocs/secondSection';
