add contact form

--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -1,4 +1,5 @@
 include ../common/header.pug
+<link href="https://fonts.googleapis.com/css?family=Anton|Arimo" rel="stylesheet">
 
 <main id="contentPage">
 
@@ -12,6 +13,7 @@ include ../common/header.pug
     include sections/sixthSection.pug
     include sections/newsletter.pug
     include sections/seventhSection.pug
+    include sections/contactForm.pug
 </main>
 
 
