--- a/src/pages/sections/fourthSection.pug
+++ b/src/pages/sections/fourthSection.pug
@@ -2,7 +2,7 @@
     <div class="fourthSectionImg"></div>
     <div class="fourthSectionIcon"></div>
     <div class="sectionContent">
-        <h2>The good title</h2>
+        <h2>Simple to ride</h2>
         <p>You decide how you want to ride, establish your own style of skating with the concaved kicktail. This provides the ability for sharp slow speed kick-turns or high speed carving. We've give you a 9inch wide carbon fibre deck that provides great balance.
         </p>
     </div>
