--- a/src/pages/sections/header.pug
+++ b/src/pages/sections/header.pug
@@ -1,5 +1,5 @@
 <header class="header">
-    <h1>Last mile transport</h1>
-    <h2>Electric skateboard</h2>
-    <button>Buy now</button>
+    <h1 id="header__title">Last mile transport</h1>
+    <h2 id="header__second-title">Electric skateboard</h2>
+    <button id="header__order-button">Order now</button>
 </header>
