--- a/src/pages/sections/thirdSection.pug
+++ b/src/pages/sections/thirdSection.pug
@@ -3,7 +3,7 @@
     <div class="thirdSectionIcon"></div>
     <div class="sectionContent">
         <h2>Removable battery</h2>
-        <p>We've given yout total flexibility with removable batteries that are also a standalone external power blank, use the USB to charge your electronics wherever you go and these will be used in the future Yike products.
+        <p>We've given you total flexibility with removable batteries that are also a standalone external power blank, use the USB to charge your electronics wherever you go and these will be used in the future Yike products.
         </p>
     </div>
 </section>
