--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -1,5 +1,7 @@
 include ../common/header.pug
 <link href="https://fonts.googleapis.com/css?family=Anton|Arimo" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 <main id="contentPage">
 
