--- a/src/scss/blocs/secondSection.scss
+++ b/src/scss/blocs/secondSection.scss
@@ -13,3 +13,10 @@
   width: 100%;
   height:10rem;
 }
+
+@media screen and (min-width: 650px) {
+  .secondSection {
+    float: left;
+    width: 50%;
+  }
+}
