--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,4 +1,5 @@
 @import 'blocs/header';
+@import 'blocs/navBar';
 @import 'blocs/newsletter';
 @import 'blocs/burgerMenu';
 @import 'blocs/firstSection';
