--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -1,11 +1,11 @@
-include ../common/header.pug
+//include ../common/header.pug
 <link href="https://fonts.googleapis.com/css?family=Anton|Arimo" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 <main id="contentPage">
 
-    include ../common/burgerMenu.pug
+    include ../common/navBar.pug
     include sections/header.pug
     include sections/firstSection.pug
     include sections/secondSection.pug
