--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -11,12 +11,12 @@
     include sections/secondSection.pug
     include sections/thirdSection.pug
     include sections/fourthSection.pug
-    include sections/fifthSection.pug
-    include sections/sixthSection.pug
+    //include sections/fifthSection.pug
+    //include sections/sixthSection.pug
     include sections/performancesSection.pug
     include sections/newsletter.pug
-    include sections/seventhSection.pug
     include sections/contactForm.pug
+    include sections/seventhSection.pug
 </main>
 
 
