--- a/src/pages/sections/contactForm.pug
+++ b/src/pages/sections/contactForm.pug
@@ -1,6 +1,10 @@
-<section class="contactForm">
+<section class="contactForm hidden">
     <div class="contactForm__bg">
         <div class="contactForm__bg__opacity">
+            <div class="cross">
+                <span class="down"></span>
+                <span class="up"></span>
+            </div>
             <h2>Contact us</h2>
             <form method="post">
                 <label for="name">Name</label>
