--- a/src/pages/sections/newsletter.pug
+++ b/src/pages/sections/newsletter.pug
@@ -1,7 +1,7 @@
-<footer class="footer">
+<section class="newsletter">
     <h2>Sign up to our newsletter</h2>
     <form method="post">
         <input type="email" name="mail" id="mail">
         <input type="submit" id="subscribe" name="subscribe" value="Subscribe !">
     </form>
-</footer>
+</section>
