--- a/src/scss/blocs/secondSection.scss
+++ b/src/scss/blocs/secondSection.scss
@@ -14,9 +14,23 @@
   height:10rem;
 }
 
-@media screen and (min-width: 650px) {
+@media screen and (min-width: 900px) {
   .secondSection {
     float: left;
-    width: 50%;
+    width: 33.3%;
+    margin: 0;
+  }
+
+  .fourthSection {
+    width: 100%;
+  }
+  .secondSection .secondSectionIcon {
+    background-size: 12%;
+  }
+}
+
+@media screen and (min-width: 670px) and (max-width: 899px) {
+  .secondSection .secondSectionIcon {
+    background-size: 11%;
   }
 }
