--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -25,6 +25,10 @@ html {
   font-size: 62.5%;
 }
 
+.hidden {
+  display: none;
+}
+
 #contentPage {
   height: auto;
   &__mobile {
@@ -92,4 +96,9 @@ button {
   margin: 4rem 0;
   font-size: 3rem;
   text-transform: uppercase;
+  cursor: pointer;
+}
+
+input[type="submit"] {
+  cursor: pointer;
 }
