--- a/src/common/navBar.pug
+++ b/src/common/navBar.pug
@@ -7,7 +7,7 @@
         <li><a href="#">Board</a></li>
         <li><a href="#">Performances</a></li>
         <li><a href="#">About us</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="#" class="btn-contact">Contact</a></li>
         <ul class="social">
             <li></li>
             <li></li>
