--- a/src/pages/sections/seventhSection.pug
+++ b/src/pages/sections/seventhSection.pug
@@ -1,9 +1,8 @@
-<section class="contactSection">
-    <h2>Contact</h2>
+<section class="contactSection" id="contactSection">
+    <h2>Yikebike</h2>
     <span>Phone: +64 3 377 2850</span>
     <p>PO Box 42111,</p>
     <p>Christchurch 8023,</p>
     <p>New Zealand</p>
     <span>Copyright 2017 YikeBike. <br> All rights reserved </span>
-
 </section>
