--- a/src/scss/blocs/firstSection.scss
+++ b/src/scss/blocs/firstSection.scss
@@ -1,7 +1,26 @@
+.firstSection {
+  position: relative;
+  .firstSectionImg {
+    background: url("../img/YikeBoard_9.jpg") no-repeat center left;
+    background-size: 170%;
+    width: 100%;
+    height: 18rem;
+    //position: absolute;
+    //bottom: 100%;
+    //left: 57%;
+  }
+  h2 {
+    margin-top: 58%;
+  }
+}
 
-.fisrtSectionImg {
-  background: url("../img/YikeBoard_9.jpg") no-repeat center left;
-  background-size: 170%;
-  width: 100%;
-  height: 18rem;
+@media screen and (min-width: 1000px) {
+  div#firstSectionImg {
+    background-size: 40%;
+    background-position: 100% 0;
+    margin-top: 4%;
+  }
+  .firstSection h2 {
+    margin-top: 5%;
+  }
 }
