--- a/src/scss/blocs/header.scss
+++ b/src/scss/blocs/header.scss
@@ -44,40 +44,49 @@ nav {
     text-align: center;
     line-height: 6rem;
     font-family: "Arial ", sans-serif;
+    position: relative;
     &:after {
         content: '\A';
         position: absolute;
         height:100vh;
+        width: 100%;
         top:0;
         left:0;
-        background:rgba(0,0,0,0.5);
+        background:rgba(0,0,0,0.35);
     }
-    h1 {
-        font-family: "Anton", sans-serif;
-        font-weight: 900;
-        font-size: 5rem;
-        letter-spacing: 1rem;
-        margin-top: 6rem;
-        text-transform: uppercase;
-        color: white;
-    }
-    h2 {
-        font-weight: 500;
-        font-size: 2rem;
-        text-transform: uppercase;
-        color: white;
-        margin-bottom: 7rem;
+    .header__content {
+        z-index: 2;
+        color: #fff;
+        h1 {
+            font-family: "Anton", sans-serif;
+            font-weight: 900;
+            font-size: 5rem;
+            letter-spacing: 1rem;
+            margin-top: 6rem;
+            text-transform: uppercase;
+            color: white;
+        }
+        h2 {
+            font-weight: 500;
+            font-size: 2rem;
+            text-transform: uppercase;
+            color: white;
+            margin-bottom: 7rem;
+        }
+        button {
+            font-size: 2rem;
+        }
     }
 }
 
-@media screen and (min-width: 650px) {
+@media screen and (min-width: 1000px) {
     header.header {
         background-size: auto;
     }
     h1#header__title {
         text-align: right;
         width: 60%;
-        margin-left: 20%;
+        margin-left: 42%;
         font-size: 9rem;
         display: inline-block;
         line-height: 12rem;
@@ -85,13 +94,14 @@ nav {
         margin-top: 12rem;
     }
     h2#header__second-title{
-        width: 78%;
+        width: 100%;
         text-align: right;
         font-size: 3rem;
     }
     button#header__order-button{
         text-align: right;
-        margin-left: 61%;
+        font-size: 3rem;
+        margin-left: 72%;
         padding: 1.5% 3% 1%;
     }
 }
