--- a/src/scss/blocs/thirdSection.scss
+++ b/src/scss/blocs/thirdSection.scss
@@ -11,5 +11,11 @@
   background-size: 15%;
   margin-top: 4rem;
   width: 100%;
-  height:10rem;
+  height: 10rem;
+}
+
+@media screen and (min-width: 650px) {
+  div.thirdSectionIcon {
+    background-size: 12%;
+  }
 }
