--- a/src/scss/blocs/seventhSection.scss
+++ b/src/scss/blocs/seventhSection.scss
@@ -1,7 +1,7 @@
 .contactSection {
   width: 100%;
   height: 100vh;
-  background-color: grey;
+  background-color: #444;
   color: white;
   text-align: center;
   display: flex;
