--- a/src/scss/blocs/thirdSection.scss
+++ b/src/scss/blocs/thirdSection.scss
@@ -13,3 +13,9 @@
   width: 100%;
   height:10rem;
 }
+
+@media screen and (min-width: 650px) {
+  div.thirdSectionImg {
+    background-size: 12%;
+  }
+}
