Create performances section without JS

--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -13,6 +13,7 @@
     include sections/fourthSection.pug
     include sections/fifthSection.pug
     include sections/sixthSection.pug
+    include sections/performancesSection.pug
     include sections/newsletter.pug
     include sections/seventhSection.pug
     include sections/contactForm.pug
