--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -10,6 +10,7 @@
 @import 'blocs/sixthSection';
 @import 'blocs/seventhSection';
 @import 'blocs/contactForm';
+@import 'blocs/performancesSection';
 
 @import 'variables';
 
