--- a/src/scss/blocs/navBar.scss
+++ b/src/scss/blocs/navBar.scss
@@ -14,6 +14,7 @@
     height: 40px;
   }
   .navBarLinks {
+    text-align: center;
     display: flex;
     align-items: center;
     justify-content: flex-end;
