--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -12,7 +12,7 @@
     include sections/thirdSection.pug
     include sections/fourthSection.pug
     include sections/fifthSection.pug
-    include sections/sixthSection.pug
+    //include sections/sixthSection.pug
     include sections/performancesSection.pug
     include sections/newsletter.pug
     include sections/contactForm.pug
