--- a/src/pages/sections/header.pug
+++ b/src/pages/sections/header.pug
@@ -1,5 +1,5 @@
 <header class="header">
-    <div class="header__content"
+    <div class="header__content">
         <h1 id="header__title">Last mile transport</h1>
         <h2 id="header__second-title">Electric skateboard</h2>
         <button id="header__order-button">Order now</button>
