--- a/src/scss/blocs/header.scss
+++ b/src/scss/blocs/header.scss
@@ -73,17 +73,20 @@ nav {
             color: white;
             margin-bottom: 7rem;
         }
+        button {
+            font-size: 2rem;
+        }
     }
 }
 
-@media screen and (min-width: 650px) {
+@media screen and (min-width: 1000px) {
     header.header {
         background-size: auto;
     }
     h1#header__title {
         text-align: right;
         width: 60%;
-        margin-left: 20%;
+        margin-left: 42%;
         font-size: 9rem;
         display: inline-block;
         line-height: 12rem;
@@ -91,13 +94,14 @@ nav {
         margin-top: 12rem;
     }
     h2#header__second-title{
-        width: 78%;
+        width: 100%;
         text-align: right;
         font-size: 3rem;
     }
     button#header__order-button{
         text-align: right;
-        margin-left: 61%;
+        font-size: 3rem;
+        margin-left: 72%;
         padding: 1.5% 3% 1%;
     }
 }
