--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -11,7 +11,7 @@
     include sections/secondSection.pug
     include sections/thirdSection.pug
     include sections/fourthSection.pug
-    include sections/fifthSection.pug
+    //include sections/fifthSection.pug
     //include sections/sixthSection.pug
     include sections/performancesSection.pug
     include sections/newsletter.pug
