--- a/src/scss/blocs/contactForm.scss
+++ b/src/scss/blocs/contactForm.scss
@@ -1,6 +1,11 @@
 @import '../_variables.scss';
 .contactForm {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  z-index: 3;
   height: 100vh;
+  width: 100vw;
   .contactForm__bg {
     background: url("../img/YikeBoard_10.jpg") no-repeat center;
     background-size: 265%;
@@ -12,7 +17,7 @@
     content: '\A';
     position: absolute;
     width: 100%;
-    height:100%;
+    height: 100%;
     top:0;
     left:0;
     background:rgba(0,0,0,0.2);
@@ -25,6 +30,32 @@
     top: 0;
     left: 0;
     color: #fff;
+    .cross {
+      position: relative;
+      display: block;
+      width: 30px;
+      height: 30px;
+      margin: 0 0 6% 10%;
+      cursor: pointer;
+      span {
+        position: absolute;
+        display: block;
+        left: 0;
+        background: #fff;
+        height: 5px;
+        width: 100%;
+        border-radius: 7px;
+      }
+      .down {
+        top: 33%;
+        transform: translate(-50%, -50%);
+        transform: rotate(-45deg);
+      }
+      .up {
+        bottom: 50%;
+        transform: rotate(45deg);
+      }
+    }
     h2 {
       text-align: center;
       text-transform: uppercase;
@@ -65,6 +96,20 @@
         border-radius: 2pt;
         border: 1pt solid $primary;
       }
+    }
+  }
+}
+
+@media screen and (min-width: 900px) {
+  .contactForm {
+    position: fixed;
+    width: 30vw;
+    height: 100vh;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    .contactForm__bg {
+      background-size: 240%;
     }
   }
 }
