--- a/src/pages/sections/seventhSection.pug
+++ b/src/pages/sections/seventhSection.pug
@@ -1,4 +1,4 @@
-<section class="contactSection">
+<section class="contactSection" id="contactSection">
     <h2>Yikebike</h2>
     <span>Phone: +64 3 377 2850</span>
     <p>PO Box 42111,</p>
