--- a/src/scss/blocs/seventhSection.scss
+++ b/src/scss/blocs/seventhSection.scss
@@ -1,6 +1,6 @@
 .contactSection {
   width: 100%;
-  background-color: #444;
+  background: url('../img/yikeboard-img-bg.jpg') 18% 50% no-repeat;
   color: white;
   text-align: center;
   display: flex;
@@ -8,20 +8,41 @@
   justify-content: center;
   flex-direction: column;
   font-family: sans-serif;
+  position: relative;
+  &:after {
+    content: '\A';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top:0;
+    left:0;
+    background:rgba(0,0,0,0.3);
+  }
   h2 {
     color: #23a455;
     font-size: 3rem;
     font-weight: 900;
     padding: 4rem 0;
+    z-index: 2;
   }
   p {
     font-size: 2rem;
+    z-index: 2;
   }
   span {
     padding: 4rem 0;
     font-size: 2.5rem;
+    z-index: 2;
   }
   span:last-child {
     font-size: 1.3rem;
   }
+}
+
+@media screen and (min-width: 900px) {
+  section.contactSection#contactSection {
+    background: url('../img/yikeboard-img-bg.jpg') center center no-repeat;
+    background-size: 100%;
+  }
+
 }
