dynamic perf and responsive

--- a/src/pages/sections/performancesSection.pug
+++ b/src/pages/sections/performancesSection.pug
@@ -20,8 +20,8 @@
 
     <div class="statsContainer">
 
-        <div class="boardOneStats">15 <span>MPH</<span></div>
-        <div class="boardTwoStats">20 <span>MPH</<span></div>
+        <div class="boardOneStats"><p class="perfKeyOne">15</p> <span class="mesurePerfKeyOne">MPH</span></div>
+        <div class="boardTwoStats"><p class="perfKeyTwo">20</p> <span class="mesurePerfKeyTwo">MPH</span></div>
 
     </div>
     <div class="motorsContainer">
