black background nav on scroll, conditionnal rendering burger menu

--- a/src/common/header.pug
+++ b/src/common/header.pug
@@ -1,19 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-</head>
-<body>
-    <nav>
-        <div class="nav__burgerMenu">
+<nav class="mobileNav">
+    <div class="nav__burgerMenu">
 
-        </div>
+    </div>
 
-        <div class="nav__logo">
+    <div class="nav__logo">
 
-        </div>
-    </nav>
+    </div>
+</nav>
     
