--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -1,11 +1,21 @@
-//include ../common/header.pug
-<link href="https://fonts.googleapis.com/css?family=Anton|Arimo" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/css?family=Anton|Arimo" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+</head>
+<body>
 
 <main id="contentPage">
 
+
+    include ../common/header.pug
     include ../common/navBar.pug
+    include ../common/burgerMenu.pug
     include sections/header.pug
     include sections/firstSection.pug
     include sections/secondSection.pug
