--- a/src/scss/blocs/burgerMenu.scss
+++ b/src/scss/blocs/burgerMenu.scss
@@ -2,6 +2,7 @@
   width: 100%;
   height: 100vh;
   opacity: 0;
+  z-index: -22;
   position: fixed;
   background-color: #23a455;
   display: flex;
@@ -27,15 +28,6 @@
 .active {
   opacity: 1;
   transition: 0.3s;
+  z-index: 22;
 }
 
-.showLi {
-  opacity: 1;
-  margin: 3rem 0;
-}
-
-@media screen and (min-width: 650px) {
-  .burgerMenu {
-    display: none;
-  }
-}
