--- a/src/scss/blocs/header.scss
+++ b/src/scss/blocs/header.scss
@@ -105,3 +105,11 @@ nav {
         padding: 1.5% 3% 1%;
     }
 }
+
+@media screen and (min-width: 940px) {
+    nav {
+        display: none;
+        z-index: 22;
+    }
+}
+
