--- a/src/common/navBar.pug
+++ b/src/common/navBar.pug
@@ -4,9 +4,9 @@
     </div>
     <ul class="navBarLinks">
         <li><a href="#">Home</a></li>
-        <li><a href="#">Board</a></li>
-        <li><a href="#">Performances</a></li>
-        <li><a href="#">About us</a></li>
+        <li><a href="#firstSectionImg">Board</a></li>
+        <li><a href="#performances">Performances</a></li>
+        <li><a href="#contactSection">About us</a></li>
         <li><a href="#" class="btn-contact">Contact</a></li>
         <ul class="social">
             <li></li>
