--- a/src/pages/sections/firstSection.pug
+++ b/src/pages/sections/firstSection.pug
@@ -1,6 +1,6 @@
 <section class="firstSection">
     <div class="firstSectionImg" id="firstSectionImg"></div>
-    <div class="sectionContent">
+    <div class="sectionContent" id="boards">
         <h2>Be one of the first people in the world to experience the Yikeboard</h2>
         <p>The YikeBoard is the ﬁrst of three, brand new last mile transport products to be released over the next year, all using the same portable battery technology and all made from the very best carbon ﬁber materials. Now we offer you the best in customer focussed features, with a simple to master, light weight electric skateboard. </p>
     </div>
