--- a/src/pages/sections/performancesSection.pug
+++ b/src/pages/sections/performancesSection.pug
@@ -1,5 +1,5 @@
-<h2 class="performancesTitle">Performances</h2>
-<section class="performancesSection">
+<h2 class="performancesTitle" >Performances</h2>
+<section class="performancesSection" id="performances">
     <div class="iconContainer">
         <div class="speedIcon"></div>
         <div class="batteryIcon"></div>
@@ -8,7 +8,7 @@
     </div>
 
     <div class="perfContainer">
-        <div class="activePerfColor">speed</div>
+        <div>speed</div>
         <div>autonomy</div>
         <div>Weight</div>
         <div>Angle</div>
