--- a/src/scss/blocs/performancesSection.scss
+++ b/src/scss/blocs/performancesSection.scss
@@ -51,7 +51,7 @@
     margin: 2%;
     div {
       text-transform: uppercase;
-      color: #AAAAAA;
+      color: inherit;
       font-size: 1.6rem;
     }
   }
