--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -2,13 +2,11 @@
 @import 'blocs/navBar';
 @import 'blocs/newsletter';
 @import 'blocs/burgerMenu';
-@import 'blocs/firstSection';
-@import 'blocs/secondSection';
-@import 'blocs/thirdSection';
-@import 'blocs/fourthSection';
-@import 'blocs/fifthSection';
-@import 'blocs/sixthSection';
-@import 'blocs/seventhSection';
+@import 'blocs/presentation';
+@import 'blocs/carbonFiber';
+@import 'blocs/removableBattery';
+@import 'blocs/simpleToRide';
+@import 'blocs/footer';
 @import 'blocs/contactForm';
 @import 'blocs/performancesSection';
 
