--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -17,16 +17,14 @@
     include ../common/navBar.pug
     include ../common/burgerMenu.pug
     include sections/header.pug
-    include sections/firstSection.pug
-    include sections/secondSection.pug
-    include sections/thirdSection.pug
-    include sections/fourthSection.pug
-    //include sections/fifthSection.pug
-    //include sections/sixthSection.pug
+    include sections/presentation
+    include sections/carbonFiber
+    include sections/removableBattery
+    include sections/simpleToRide
     include sections/performancesSection.pug
     include sections/newsletter.pug
     include sections/contactForm.pug
-    include sections/seventhSection.pug
+    include sections/footer
 </main>
 
 
