--- a/src/pages/sections/performancesSection.pug
+++ b/src/pages/sections/performancesSection.pug
@@ -8,7 +8,7 @@
     </div>
 
     <div class="perfContainer">
-        <div>speed</div>
+        <div class="activePerfColor">speed</div>
         <div>autonomy</div>
         <div>Weight</div>
         <div>Angle</div>
