Fix burger menu

--- a/src/common/burgerMenu.pug
+++ b/src/common/burgerMenu.pug
@@ -1,8 +1,8 @@
 <ul class="burgerMenu">
     <li class="closeButton">X</li>
-    <li>Home</li>
-    <li>Board</li>
-    <li>Performances</li>
-    <li>About us</li>
-    <li>Contact</li>
+    <li><a href="#">Home</a></li>
+    <li><a href="#firstSectionImg">Board</a></li>
+    <li><a href="#performances">Performances</a></li>
+    <li><a href="#contactSection">About us</a></li>
+    <li><a href="#" class="btn-contact">Contact</a></li>
 </ul>
