--- a/src/common/navBar.pug
+++ b/src/common/navBar.pug
@@ -1,17 +1,10 @@
 <section class="navBar">
-    <div class="logoDesktop">
-
-    </div>
+    <div class="logoDesktop"></div>
     <ul class="navBarLinks">
         <li><a href="#">Home</a></li>
         <li><a href="#firstSectionImg">Board</a></li>
         <li><a href="#performances">Performances</a></li>
         <li><a href="#contactSection">About us</a></li>
         <li><a href="#" class="btn-contact">Contact</a></li>
-        <ul class="social">
-            <li></li>
-            <li></li>
-            <li></li>
-        </ul>
     </ul>
 </section>
